test/compile_errors/err_membership_requires_contains.w
//! expect-error: does not implement Contains

type Boxed { value: i32 }

fn main:
    let b = Boxed { value: 1 }
    let _ = 1 in b
